Got footer aligned correctly, all viewports

--- a/scss/_content.scss
+++ b/scss/_content.scss
@@ -30,6 +30,11 @@
 
 #content {
   @media ($bp-when-drawer-expands) {
+    @include box-shadow(
+      0 0 5px rgba($color-ui-medium, 0.2),
+      0 0 50px rgba($color-ui-medium, 0.2)
+    );
+    background-color: $color-background;
     flex: 1 0 0;
     max-width: $max-width-content;
   }
@@ -56,13 +61,3 @@
     padding: size(4);
   }
 }
-
-  .content-text {
-    @media ($bp-when-drawer-expands) {
-      @include box-shadow(
-        0 0 5px rgba($color-ui-medium, 0.2),
-        0 0 50px rgba($color-ui-medium, 0.2)
-      );
-      background-color: $color-background;
-    }
-  }
